css/projects-style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    list-style: none;
}

body {
    font-family: Signika, sans-serif;
}

p {
    margin: 0;
}

/***** NAVBAR STYLING *****/

.navbar {
    background-color: #f0f6de !important; /* background color requires !imp tag */
}

/* "kathleen nguyen esfahany" on left corner of nav" */
.navbar-brand {
    letter-spacing: 1.5px;
    font-weight: 400;
    font-size: 20px;
}

.nav-item {
    letter-spacing: 0.7px;
    font-weight: 300 !important;
    font-size: 18px;
    padding-left: 20px !important;
}

.active {
    font-weight: 400 !important;
}

/***** PROJECTS PAGE *****/

.column {
    width: 33%; /* 3 columns on default full screen */
    padding-top: 50px;
    justify-content: center; /* justify-content and display make the cards sit in the center of the column */
    display: flex;
}
  
.row {
    max-width: 1200px;
    margin: auto;
    /* position: relative; */
}

.card {
    box-shadow: 4px 4px #80ABC7;
    padding: 15px; /* internal padding*/
    text-align: left;

    /* card size */
    width: 340px;
    height: 365px;

    /* card border */
    border-style: solid;
    border-width:1.5px;
    border-color: #80ABC7;
    border-radius: 6px;
}

.card:hover{
    box-shadow: 4px 4px #80ABC7, 7px 7px #C1DFF3, 9px 9px #E5F4FE;
}

.proj-img {
    position: relative;
    object-fit: cover;
    object-position: 50% 20%; /* defines how object fits within img window */
    height: 45%;
    width: 100%;

    /* img border */
    border-style: solid;
    border-color: #80ABC7;
    border-radius: 6px;
    border-width: 1px;
}

/* enlarge image slightly on card hover */
.card:hover .proj-img {
    transform: scale(1.01);
}

.proj-title {
    /* font styling */
    font-size: 18px;
    font-weight: 400;
    letter-spacing: 0.5px;
    line-height: 1.5em;

    /* positioning */
    padding-top: 10px;
}

.proj-title a{
    color: black;
}

.proj-title a:hover {
    color: #0075BA;
    text-decoration: none;
}

.affiliation {
    /* give a height so the tags are aligned across different cards */
    height: 70px;

    /* font styling */
    font-size: 16px;
    font-weight: 300;
    letter-spacing: 0.5px;
    font-style: italic;

    /* positioning */
    padding-top: 8px;
    padding-bottom: 10px;
}

.tag {
    position: relative;
    /* top: 5px; center aligning relative to role title */

    /* font styling */
    font-size: 16px;
    font-weight: 300;
    color: black;
    background-color: #C4E4E9;

    /* tag box border */
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    border-color: grey;

    /* tag box formatting */
    width: fit-content;
    padding: 0px 4px;
    
    /* positioning*/
    margin-right: 4px;
    line-height: 30px; /* create vertical padding between lines of tags */
}

.tag:hover {
    /* color: red; */
    background-color: #F7ECCA;
    text-decoration: none;
    font-weight: 400;
    color: black;
}


@media screen and (max-width: 1075px) {
    .column {
        width: 50%;
        display: block;
        margin-bottom: 20px;
        justify-content: center;
        display: flex;
    }
}


/* Responsive columns - one column layout (vertical) on small screens */
@media screen and (max-width: 700px) {

    .column {
        width: 100%;
        display: block;
        margin-bottom: 20px;
        justify-content: center;
        display: flex;
    }

    .card {
        width: 200px;
    }

    .proj-title {
        font-size: 16px;
    }
}

